--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is github</h1>
     <h2>This is github section</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, corporis.</p>
 </body>
 </html>
