--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
     <h1>This is github</h1>
     <h2>This is github section</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, corporis.</p>
+    <div>
+        <section>
+            <button>Submit</button>
+        </section>
+        <p>Lorem ipsum dolor sit amet.</p>
+    </div>
 </body>
 </html>
